--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,52 @@
-/*  your css code here. If applicable */
+body {
+    width: 1100px;
+	background-color:pink;
+    margin: 0 auto;
+    font-family: Arial, sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+.container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.imageContainer {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table, tr, td {
+    border: 1px solid black;
+}
+
+#c1, #c3 {
+    width: 200px;
+    text-align: center;
+}
+
+#c2 {
+    width: 600px;
+    text-align: center;
+}
+
+td img {
+    width: 100%;
+    height: auto;
+    max-width: 200px;
+    margin: 0 auto;
+}
+
+p {
+    font-size: 16px;
+    line-height: 1.6;
+}
